# cht-frontend

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
chat_backend/: .gitignore  README.md  mix.exs
chat_backend/assets/css/: app.css
chat_backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
chat_backend/lib/: chat_backend_web.ex
chat_backend/lib/chat_backend/: application.ex
chat_backend/lib/chat_backend_web/: endpoint.ex  router.ex
chat_backend/lib/chat_backend_web/channels/: room_channel.ex  user_socket.ex
incognito-rust-backend/: .env  Cargo.toml
incognito-rust-backend/migrations/: 20250825130645_init.sql
incognito-rust-backend/src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs  models.rs
src/: main.tsx
src/components/: features.tsx
src/components/ui/: Vortex.tsx  beam.tsx  icon-ripple.tsx  lamp.tsx  starsback.tsx  stickyscroll.tsx  typewriter.tsx
src/lib/: socket.ts
src/pages/: Home.tsx  SignIn.tsx  chat.tsx  thread_dashboard.tsx  threads.tsx
